--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Twitter Clone<br>Created by Jayesh Sugumaran</title>
+    <title>Twitter Clone - 
+      Created by Jayesh Sugumaran</title>
     <meta name="description" content="Twitter Clone to understand Node Api concepts" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/style.css" />
